# wgtunnel-android

./: README.md  crowdin.yml
.github/workflows/: nightly.yml  publish.yml
app/: build.gradle.kts
app/schemas/com.zaneschepke.wireguardautotunnel.data.AppDatabase/: 32.json  33.json
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: qs_logo.xml
app/src/main/res/raw/: keep.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-et/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ka/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-nb-rNO/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-nod/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-pt-rPT/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sk/: strings.xml
app/src/main/res/values-sr/: strings.xml
app/src/main/res/values-ta/: strings.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-ur/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
buildSrc/src/main/kotlin/: Constants.kt  Extensions.kt
gradle/: libs.versions.toml
hevtunnel/: build.gradle.kts
networkmonitor/: build.gradle.kts
pinger/: build.gradle.kts
tunnel/: build.gradle.kts
tunnel/tools/: CMakeLists.txt
tunnel/tools/libwg-go/: Makefile  go.mod  go.sum
tunnel/tools/libwg-go/proxy/: proxy.go  proxy_jni.c
tunnel/tools/libwg-go/shared/: logger.go
tunnel/tools/libwg-go/vpn/: extendeddns.go  vpn.go  vpn_jni.c
(+97 files in other folders)
